# effio-contracts

./: README.md  account_service_openapi.json  generate_contracts.py  pyproject.toml
.github/workflows/: generate_contracts.yaml
contracts/: service_account.py
effio/contracts/: events.py  service_account.py  service_auth.py
effio/schemas/: events_account.py
schemas/events/: events_account.py
schemas/openapi/: services_accounts_v1_openapi.json
